force-app/main/default/objects/Etapas_socio__c/Etapas_socio__c.object-meta.xml
<CustomObject>
    <label>Etapas socio</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Etapas socio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Etapas socio</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>