force-app/main/default/objects/Etapas_socio__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <label>Nombre de cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Etapas socio</relationshipLabel>
    <relationshipName>Etapas_socio</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>