force-app/main/default/objects/Etapas_socio__c/fields/Fecha_baja__c.field-meta.xml
<CustomField>
    <fullName>Fecha_baja__c</fullName>
    <label>Fecha baja</label>
    <type>Date</type>
</CustomField>