force-app/main/default/objects/Etapas_socio__c/fields/Modalidad__c.field-meta.xml
<CustomField>
    <fullName>Modalidad__c</fullName>
    <label>Modalidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Colectivo</fullName>
            </value>
            <value>
                <fullName>Colectivo federado</fullName>
            </value>
            <value>
                <fullName>Familiar</fullName>
            </value>
            <value>
                <fullName>Familiar federado</fullName>
            </value>
            <value>
                <fullName>Niños 0-5</fullName>
            </value>
            <value>
                <fullName>Niños 6-13</fullName>
            </value>
            <value>
                <fullName>Juniors 14-17</fullName>
            </value>
            <value>
                <fullName>Jóvenes 18-25</fullName>
            </value>
            <value>
                <fullName>Jóvenes 18-25 federados</fullName>
            </value>
            <value>
                <fullName>Jóvenes 26-30</fullName>
            </value>
            <value>
                <fullName>Jóvenes 26-30 federados</fullName>
            </value>
            <value>
                <fullName>Menor No soci</fullName>
            </value>
            <value>
                <fullName>No soci</fullName>
            </value>
            <value>
                <fullName>Participatiu</fullName>
            </value>
            <value>
                <fullName>Protector</fullName>
            </value>
            <value>
                <fullName>Protector federados</fullName>
            </value>
            <value>
                <fullName>Veteranos</fullName>
            </value>
            <value>
                <fullName>Veteranos federados</fullName>
            </value>
            <value>
                <fullName>Vitalicio</fullName>
            </value>
            <value>
                <fullName>Seniors</fullName>
            </value>
            <value>
                <fullName>Seniors federados</fullName>
            </value>
            <value>
                <fullName>Veteranos y seniors</fullName>
                <isActive>false</isActive>
                <label>Veteranos y seniors</label>
            </value>
            <value>
                <fullName>Veteranos y seniors federados</fullName>
                <isActive>false</isActive>
                <label>Veteranos y seniors federados</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>