force-app/main/default/objects/Etapas_socio__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Modalidad__c</columns>
    <columns>Fecha_alta__c</columns>
    <columns>Fecha_baja__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>